<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/list_selector">
   
  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_job"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_job"/>
  

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_car_sale"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_car_sell"/>
 
 
  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_used_item"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_used_item"/>
  	
  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_house_sale"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_house_sell"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_business_sale"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_business_sell"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_car_rent"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_car_rental"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_house_rent"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_rental_house"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_business_lease"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_rental_business"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_cinema"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_movie_theater"/>

  	<CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:button="@drawable/custom_checkbox_design"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_event"
        android:textColor="#FFFFFF"
        android:id="@+id/cb_event"/>

  	    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">   
        <LinearLayout 
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">    
		    <Button
		        android:id="@+id/select_button"
		        style="@style/Button"
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:background="#932929"
		        android:text="@string/btn_ok"
		        android:textColor="#FFFFFF" />
		</LinearLayout>
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="end">		
		    <Button
		        android:id="@+id/btn_cancel"
		        style="@style/Button"
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:background="#932929"
		        android:text="@string/btn_cancel"
		        android:layout_gravity="right"
		        android:textColor="#FFFFFF" />
	    </LinearLayout>
	</LinearLayout>   	
</LinearLayout>