<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D5CED5"
    android:orientation="vertical" >
    
    <EditText 
        android:layout_height= "wrap_content"
		android:layout_width= "fill_parent"
		android:hint="@string/txt_title"
		android:background="@android:drawable/edit_text"
        android:id="@+id/title"/>
          
    <Spinner 
        android:layout_height= "wrap_content"
		android:layout_width= "fill_parent"
		android:background="@android:drawable/btn_dropdown"
        android:id="@+id/location"/> 

    <Spinner 
        android:layout_height= "wrap_content"
		android:layout_width= "fill_parent"
		android:background="@android:drawable/btn_dropdown"
        android:id="@+id/type_one"/> 
        
    <EditText 
        android:layout_height= "wrap_content"
		android:layout_width= "fill_parent"
		android:background="@android:drawable/edit_text"
        android:id="@+id/item_text"/>    
        
    <EditText 
        android:layout_height= "120dp"
		android:layout_width= "fill_parent"
		android:hint="@string/txt_discription"
		android:background="@android:drawable/edit_text"
        android:id="@+id/item_description"/>
        
  	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">  
    	<Button
	        android:id="@+id/choose_photo"
	        android:layout_width="150dp"
			style="@style/DashboardButton"
			android:drawableTop="@drawable/btn_choose_photo"
	        android:text="@string/btn_choose_photo"/>

    	<Button
	        android:id="@+id/take_photo"
			style="@style/DashboardButton"
			android:drawableTop="@drawable/btn_take_photo"
	        android:text="@string/btn_take_photo"/>
   	</LinearLayout>
 	
  	<TextView 
        android:layout_height= "wrap_content"
		android:layout_width= "fill_parent"
        android:id="@+id/image_name"/>	
  	    
    <Button
        android:id="@+id/btn_add_list"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#932929"
        android:text="@string/btn_add_list"
        android:textColor="#FFFFFF" />    
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"> 
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_back"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#932929"
        android:text="@string/btn_back"
        android:textColor="#FFFFFF" />     
</LinearLayout>