<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/list_selector">
   
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	  	<TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_title"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/name"/>
  	</LinearLayout>
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_cinema"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/cinema"/>
	</LinearLayout>	
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_movie_type"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/movie_type"/>
	</LinearLayout>
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_show_time"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/show_time"/>
	</LinearLayout>	
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_show_date"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/show_date"/>
	</LinearLayout>					
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_location"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/location"/>
	</LinearLayout>
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">	
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_price"/>    	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/price"/>
	</LinearLayout>		
  	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_discription"/>	    	      
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text=""
	        android:id="@+id/discription"/>
	</LinearLayout>
	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_email"/>	    	      
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
			android:autoLink="email"  
	        android:id="@+id/email"/>
	</LinearLayout>					
	<LinearLayout  android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/list_item_title"
	        android:text="@string/txt_phone_no"/>	    	      
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	       	android:autoLink="phone"       
	        android:id="@+id/phone_no"/>
	</LinearLayout>			
</LinearLayout>