<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_selector"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">      
        <TextView 
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:text="@string/txt_user_name"
	        android:layout_height= "wrap_content"
	        android:layout_width= "110dp"/>       
        <EditText 
            android:layout_height= "wrap_content"
			android:layout_width= "fill_parent"
			android:background="@android:drawable/edit_text"
	        android:id="@+id/user_name"/>
    </LinearLayout>    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">      
        <TextView 
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:text="@string/txt_password"
	        android:layout_height= "wrap_content"
	        android:layout_width= "110dp"/>       
        <EditText 
            android:layout_height= "wrap_content"
			android:layout_width= "fill_parent"
			android:background="@android:drawable/edit_text"
			android:inputType="textPassword"
	        android:id="@+id/password"/>
    </LinearLayout>    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">   
        <LinearLayout 
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">    
		    <Button
		        android:id="@+id/btn_login"
		        style="@style/Button"
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:background="#932929"
		        android:text="@string/btn_login"
		        android:textColor="#FFFFFF" />
		</LinearLayout>
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="end">		
		    <Button
		        android:id="@+id/btn_cancel"
		        style="@style/Button"
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:background="#932929"
		        android:text="@string/btn_cancel"
		        android:layout_gravity="right"
		        android:textColor="#FFFFFF" />
	    </LinearLayout>
	</LinearLayout>        
</LinearLayout>